basic functional edit view with delete functionality (#20)
* basic functional edit view, buggy delete functionality

* deleting functionality fix

* Also update list overview when item was deleted

* fix GBP formatting

* recurring rule details clarifications - show total amount up top and then the per-day data down below

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.DS_Store
+Broke Breaker/Broke Breaker.xcodeproj/project.pbxproj
 
 # macOS
 .DS_Store
@@ -14,14 +14,4 @@ build/
 .build/
 Packages/
 Package.resolved
-
-# Optional: fastlane (if used)
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
-
-
-
-
 
