--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 Broke Breaker/Broke Breaker.xcodeproj/project.pbxproj
 
+LedgerCLI/ledger.sqlite
+LedgerCLI/ledger.sqlite-shm
+LedgerCLI/ledger.sqlite-wal
+
 # macOS
 .DS_Store
 
